# alexa-cli

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  FOR_CLIENTS.md  LICENSE  Makefile  README.md  requirements.txt  setup.cfg  setup.py
alexa_cli/: cli.py  tokens.json
alexatext/: cli.py
docs/superpowers/plans/: 2026-06-27-alexa-rust-cli.md
docs/superpowers/specs/: 2026-06-27-alexa-rust-cli-design.md
src/: audio.rs  auth.rs  avs.rs  cache.rs  cli.rs  config.rs  lib.rs  main.rs  remote.rs  stt.rs
src/tts/: espeak.rs  mod.rs  piper.rs
tests/: test_cli.py  test_cli_basics.py
