[package]
name = "alexa-cli"
version = "0.2.0"
edition = "2021"
description = "Round-trip text through Alexa: TTS -> AVS -> Whisper STT"
license = "MIT"

[lib]
name = "alexa_cli"
path = "src/lib.rs"

[[bin]]
name = "alexa"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
blake3 = "1"
hound = "3.5"
rubato = "0.15"
symphonia = { version = "0.5", features = ["mp3"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
tiny_http = "0.12"
webbrowser = "1"
h2 = "0.4"
http = "1"
bytes = "1"
rustls = "0.23"
tokio-rustls = "0.26"
webpki-roots = "0.26"
whisper-rs = "0.16"
sherpa-onnx = "1"

[dev-dependencies]
tempfile = "3"
